@@ -25,6 +25,7 @@ h3. Version 0.8 (NOT OFFICIALLY RELEASED YET)
 * @GroupCountClosurePipe@ has signature of @<S,K>@ to denote the key of its @Map<K,Number>@ side-effect
 * Removed @ComparisonFilterPipe@ as it is confusing and now @PipeHelper@ has comparison support
 * Added @PipeHelper.makePipeString()@ to have a single point where all pipe @toString()@s are created
+* Optimized @PipeHelper.counter()@ by respecting architecture of @AbstractPipe@
 
 ==<hr/>==
 
